chore: feitas algumas mudanças que o mentor pediu, junto com a parte do responsável por setor selecionar o setor que quer trabalhar e também o solicitar setor apresentar todas as estruturas e não apenas as estruturas que ele já esta